--- a/package.json
+++ b/package.json
@@ -1,18 +1,9 @@
 {
   "name": "vercel-mp3-player",
   "version": "1.0.0",
-  "description": "Vercel compatible MP3 player with drag and drop seeking",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
-  },
   "dependencies": {
-    "axios": "^1.4.0",
-    "ejs": "^3.1.9",
-    "express": "^4.18.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
+    "express": "^4.18.2",
+    "node-fetch": "^2.6.7"
   }
 }
+    
