--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/**/*.php",
+      "src": "**/*.php",  
       "use": "vercel-php@0.6.0",
       "config": { "phpVersion": "7.4" }
     },
@@ -19,10 +19,6 @@
     {
       "src": "/(.*)",
       "dest": "api/index.php"
-    },
-    {
-      "src": "/public/(.*)",
-      "dest": "public/$1"
     }
   ]
 }
