--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,17 @@
 {
   "version": 2,
+  "functions": {
+    "api/**/*.php": {
+      "runtime": "vercel-php@0.6.0"
+    }
+  },
   "builds": [
     {
-      "src": "**/*.php",  
+      "src": "api/**/*.php",
       "use": "vercel-php@0.6.0",
-      "config": { "phpVersion": "7.4" }
+      "config": {
+        "phpVersion": "7.4"
+      }
     },
     {
       "src": "public/**/*",
@@ -19,6 +26,11 @@
     {
       "src": "/(.*)",
       "dest": "api/index.php"
+    },
+    {
+      "src": "/public/(.*)",
+      "dest": "public/$1"
     }
   ]
 }
+    
