--- a/vercel.json
+++ b/vercel.json
@@ -1,36 +1,43 @@
 {
   "version": 2,
-  "functions": {
-    "api/**/*.php": {
-      "runtime": "vercel-php@0.6.0"
-    }
-  },
-  "builds": [
-    {
-      "src": "api/**/*.php",
-      "use": "vercel-php@0.6.0",
-      "config": {
-        "phpVersion": "7.4"
-      }
-    },
-    {
-      "src": "public/**/*",
-      "use": "@vercel/static"
-    }
-  ],
   "routes": [
     {
-      "src": "/info",
-      "dest": "api/info.php"
+      "src": "/api/kw",
+      "methods": ["GET"],
+      "dest": "/api/kw.js"
     },
     {
-      "src": "/(.*)",
-      "dest": "api/index.php"
-    },
+      "src": "/api/kw\\.php",
+      "dest": "/api/kw.js"
+    }
+  ],
+  "functions": {
+    "api/kw.js": {
+      "maxDuration": 30,
+      "memory": 1024
+    }
+  },
+  "headers": [
     {
-      "src": "/public/(.*)",
-      "dest": "public/$1"
+      "source": "/api/(.*)",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET, OPTIONS"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "Content-Type"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=3600, s-maxage=3600"
+        }
+      ]
     }
   ]
 }
-    
